syntax = "proto3";

option go_package="./user";
option php_generic_services=true;
option php_class_prefix="";
option php_metadata_namespace="Mszlu\\Pb\\GPBMetadata";
option php_namespace="Mszlu\\Pb\\User";

package user;

message UserRequest {
  repeated int32 id = 1;
}

message UserResponse {
  int32 id = 1;
  optional string username = 2;
  repeated string area = 3;
}

service UserService {
  //rpc 服务的函数名 （传入参数）返回（返回参数）
  rpc Search (UserRequest) returns (UserResponse);
}